--- a/blog/src/assets/css/base.css
+++ b/blog/src/assets/css/base.css
@@ -1,4 +1,3 @@
-@import './normalize.css';
 @import '../iconfont/iconfont.css';
 
 * {
@@ -6,7 +5,7 @@
   margin: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: "Microsoft YaHei","PingFang SC", "微软雅黑", Arial,sans-serif;
+  font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
 
 body#light {
@@ -32,7 +31,6 @@ body#dark {
 }
 
 body {
-  font-family: Noto Sans,sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
